adjust tests